fix(BookingForm): Resolved issues in the asynchronous API, resolved style issue in home page (overflow of image)

--- a/src/index.css
+++ b/src/index.css
@@ -451,6 +451,7 @@ footer.container {
 .container.hero {
   background-color: #495E57;
   margin-bottom: 100px;
+  overflow: visible;
 }
 
 .container.home.hero>.content {
